# MySQL-dev

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  run.sh
.devcontainer/: Dockerfile  clean.sh  conn-build.sh  devcontainer.json  docker-compose.yml  server-build.sh
.devcontainer/mysql/: Dockerfile
.github/scripts/: Dockerfile  settings.json  trello_comment.py
.github/workflows/: build_image.yml  post_comment_on_trello.yaml
Helloworld/: CMakeLists.txt  main.cpp
bin-server/: cmake.sh
